Add new assets and layout improvements
Added cordel-moderno.txt and background images for desafio012, including some __MACOSX metadata files. Updated fundo006.html to use background shorthand and increased main's max-width. Added fundo007.html with centered content and background, and created centralizacao.html for ex023.

--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -6,17 +6,25 @@
     <title>Trabalhando com fundos</title>
     <style>
         body{
+            /*
             height: 100vh;
             background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
-            background-attachment: scroll;
+            background-attachment: fixed;
+            */
+            /*
+            Shorthand -> background
+            color > image > position > repeat > *size*(não funfa) > attachment
+            */
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 600px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -32,7 +40,7 @@
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi dicta perspiciatis ex quisquam amet. Aspernatur dolore nam, ratione recusandae eum eos ipsa debitis dolor voluptatibus nihil pariatur quod fugiat illo enim ipsum aut rem hic alias error doloremque officia nulla. Quibusdam sunt debitis quas? A, fuga error dolore molestias omnis facere officiis corporis. Fugit harum facere praesentium sapiente nemo, distinctio dolorem, fuga nihil obcaecati fugiat autem cupiditate repellendus ratione quibusdam ipsa adipisci nisi natus! Sit iste, quam veritatis necessitatibus, reiciendis assumenda voluptatibus iusto fugiat inventore, adipisci laborum quos sapiente facere cumque? Quae ad explicabo sequi vero labore unde, repellat, ut at, repudiandae ipsa autem illum maxime error nihil ullam quia optio est atque dolore similique laudantium obcaecati sint doloremque. Officiis debitis voluptate, voluptates temporibus nulla ad blanditiis dolore corrupti excepturi aspernatur dolor unde rerum expedita! Asperiores officiis magnam sed odio natus excepturi praesentium, magni suscipit dolore modi eveniet reprehenderit tenetur ullam nemo nihil distinctio molestiae! Rerum, vel. Vero necessitatibus fugit doloremque enim asperiores quis maxime debitis, ad exercitationem nesciunt deserunt facere beatae laudantium, neque vitae optio. Debitis quo eligendi dicta nam cum, totam aspernatur quas repellat veritatis accusamus quos voluptatem voluptates, et, consequuntur dolore quaerat aperiam similique corporis odit dolor.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi dicta perspiciatis ex quisquam amet. Aspernatur dolore nam, ratione recusandae eum eos ipsa debitis dolor voluptatibus nihil pariatur quod fugiat illo enim ipsum aut rem hic alias error doloremque officia nulla. Quibusdam sunt debitis quas? A, fuga error dolore molestias omnis facere officiis corporis. Fugit harum facere praesentium sapiente nemo, distinctio dolorem, fuga nihil obcaecati fugiat autem cupiditate repellendus ratione quibusdam ipsa adipisci nisi natus! Sit iste, quam veritatis necessitatibus, reiciendis assumenda voluptatibus iusto fugiat inventore, adipisci laborum quos sapiente facere cumque? Quae ad explicabo sequi vero labore unde, repellat, ut at, repudiandae ipsa autem illum maxime error nihil ullam quia optio est atque dolore similique laudantium obcaecati sint doloremque. Officiis debitis voluptate, voluptates temporibus nulla ad blanditiis dolore corrupti excepturi aspernatur dolor unde rerum expedita! Asperiores officiis magnam sed odio natus excepturi praesentium, magni suscipit dolore modi eveniet reprehenderit tenetur ullam nemo nihil distinctio molestiae! Rerum, vel. Vero necessitatibus fugit doloremque enim asperiores quis maxime debitis, ad exercitationem nesciunt deserunt facere beatae laudantium, neque vitae optio. Debitis quo eligendi dicta nam cum, totam aspernatur quas repellat veritatis accusamus quos voluptatem voluptates, et, consequuntur dolore quaerat aperiam similique corporis odit dolor.</p>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi dicta perspiciatis ex quisquam amet. Aspernatur dolore nam, ratione recusandae eum eos ipsa debitis dolor voluptatibus nihil pariatur quod fugiat illo enim ipsum aut rem hic alias error doloremque officia nulla. Quibusdam sunt debitis quas? A, fuga error dolore molestias omnis facere officiis corporis. Fugit harum facere praesentium sapiente nemo, distinctio dolorem, fuga nihil obcaecati fugiat autem cupiditate repellendus ratione quibusdam ipsa adipisci nisi natus! Sit iste, quam veritatis necessitatibus, reiciendis assumenda voluptatibus iusto fugiat inventore, adipisci laborum quos sapiente facere cumque? Quae ad explicabo sequi vero labore unde, repellat, ut at, repudiandae ipsa autem illum maxime error nihil ullam quia optio est atque dolore similique laudantium obcaecati sint doloremque. Officiis debitis voluptate, voluptates temporibus nulla ad blanditiis dolore corrupti excepturi aspernatur dolor unde rerum expedita! Asperiores officiis magnam sed odio natus excepturi praesentium, magni suscipit dolore modi eveniet reprehenderit tenetur ullam nemo nihil distinctio molestiae! Rerum, vel. Vero necessitatibus fugit doloremque enim asperiores quis maxime debitis, ad exercitationem nesciunt deserunt facere beatae laudantium, neque vitae optio. Debitis quo eligendi dicta nam cum, totam aspernatur quas repellat veritatis accusamus quos voluptatem voluptates, et, consequuntur dolore quaerat aperiam similique corporis odit dolor.</p>
-        
+
     </main>
 </body>
 </html>
